objects/ClientCaseTask__c.object
<CustomObject>
    <description>To store tasks associated with client cases, typically as part of a Case Guidance Template.</description>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Client Case Task</relationshipLabel>
        <relationshipName>Client_Case_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intake_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake Request</label>
        <referenceTo>ClientCaseTask__c</referenceTo>
        <relationshipLabel>Client Case Task</relationshipLabel>
        <relationshipName>Client_Case_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intake__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake</label>
        <referenceTo>Intake__c</referenceTo>
        <relationshipLabel>Client Case Task</relationshipLabel>
        <relationshipName>Client_Case_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Not Started = Task has not been initiated
In Progress = Counselor is actively working on the task
Skipped = Counselor intentionally bypassed the task for this case - explain reason for skipping in comment field (if applicable)
Done = Counselor has finished the task successfully</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StepDetails__c</fullName>
        <label>Step Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StepName__c</fullName>
        <label>Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Client Case Task</label>
    <nameField>
        <label>Client Case Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Case Task</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>